--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: #333;
+            background: var(--bg-color);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -52,13 +52,22 @@
             opacity: 1;
         }
 
+        :root {
+            --bg-color: #1b1b1b;       /* Dark stage backdrop */
+            --accent-color: #7f0000;   /* Deep red accent */
+            --panel-bg: #2a2a2a;       /* Dark panel background */
+            --text-color: #e0e0e0;     /* Light text for contrast */
+            --button-bg: #3a3a3a;      /* Metallic button background */
+            --button-hover: #552a2a;   /* Button hover with red tint */
+        }
+
         body {
             margin: 0;
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            background: #333;
+            background: var(--bg-color);
             font-family: Arial, sans-serif;
         }
 
@@ -77,7 +86,7 @@
             bottom: 0;
             width: 100%;
             height: 400px;
-            background: linear-gradient(to bottom right, #8b4513, #6b2d0f);
+            background: #8B4513; /* Changed to saddle brown */
             box-shadow: 0 20px 30px rgba(0,0,0,0.3);
             display: flex;
             justify-content: space-around;
@@ -146,12 +155,16 @@
             bottom: 20px;
             right: 20px;
             padding: 10px 20px;
-            background: #444;
+            background: var(--button-bg);
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             z-index: 1000;
+        }
+
+        .control-panel-button:hover {
+            background: var(--button-hover);
         }
 
         .control-panel {
@@ -160,7 +173,7 @@
             left: 0;
             width: 100%;
             height: 400px; /* Increased from 300px */
-            background: rgba(0, 0, 0, 0.9);
+            background: var(--panel-bg);
             padding: 20px;
             box-sizing: border-box;
             transition: bottom 0.2s ease;
@@ -199,7 +212,7 @@
             background: #444;
             border-radius: 4px;
             margin-bottom: 5px;
-            color: white;
+            color: var(--text-color);
             cursor: pointer;
             display: flex;
             justify-content: space-between;
@@ -225,7 +238,7 @@
 
         .scene-button {
             padding: 5px 10px;
-            background: #444;
+            background: var(--button-bg);
             color: white;
             border: none;
             border-radius: 4px;
@@ -233,7 +246,7 @@
         }
 
         .scene-button:hover {
-            background: #555;
+            background: var(--button-hover);
         }
 
         .slider-panel {
@@ -341,7 +354,7 @@
 
         .dropdown-item {
             padding: 6px 12px;
-            color: white;
+            color: var(--text-color);
             cursor: pointer;
             white-space: nowrap;
             overflow: hidden;
@@ -388,7 +401,7 @@
             left: 20px;
             top: 40%;
             transform: translateY(-50%);
-            background: rgba(0, 0, 0, 0.8);
+            background: #2a2a2a; /* Changed to sienna to match the brown theme */
             padding: 20px;  /* Increased from 15px */
             border-radius: 12px;  /* Increased from 8px */
             display: flex;
@@ -483,7 +496,7 @@
             bottom: 20px;
             right: 160px;  /* Position it to the left of control panel button */
             padding: 10px 20px;
-            background: #444;
+            background: var(--button-bg);
             color: white;
             border: none;
             border-radius: 5px;
@@ -492,7 +505,7 @@
         }
 
         .export-pdf-button:hover {
-            background: #555;
+            background: var(--button-hover);
         }
 
         @media (max-width: 768px) {
@@ -583,7 +596,7 @@
 
         .autoplay-button {
             padding: 8px 15px;
-            background: #444;
+            background: var(--button-bg);
             color: white;
             border: none;
             border-radius: 4px;
@@ -627,7 +640,7 @@
             background: #444;
             border-radius: 4px;
             margin-bottom: 5px;
-            color: white;
+            color: var(--text-color);
             cursor: pointer;
         }
 
@@ -674,7 +687,7 @@
 
         .import-button {
             cursor: pointer;
-            background: #555;
+            background: var(--button-bg);
             color: white;
             border: 1px solid transparent;
             border-radius: 4px;
@@ -685,7 +698,7 @@
             font-size: 0.8em;  /* Reduced font size for "Import" */
         }
         .import-button:hover {
-            background: #666;
+            background: var(--button-hover);
             border-color: #aaa;
         }
     
