--- a/index.html
+++ b/index.html
@@ -729,6 +729,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <link rel="icon" href="sitefile/logo.png" type="image/png">
 </head>
 <body>
     <div class="credits">Developed By Ryan Yeung - Head of Stage Management Team 24-25</div>
