Scene list upgrade

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             box-sizing: border-box;
             transition: bottom 0.2s ease;
             display: grid;
-            grid-template-columns: 200px 1fr;
+            grid-template-columns: 300px 1fr; /* increased scene list width */
             gap: 20px;
             z-index: 997;
         }
